# voice-changer

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
scripts/: create-virtual-mic.sh
src/voicechanger/: audio_engine.py  main.py
src/voicechanger/gui/: qt_app.py
