[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicechanger"
version = "0.1.0"
description = "Real-Time Voice Changer using DSP Techniques (Linux)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Mihai Prodan"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "sounddevice>=0.4.6",
  "PySide6>=6.6"
]

[project.scripts]
voicechanger = "voicechanger.main:main"
